verificação entradas falsas